Update web service

--- a/service/index.html
+++ b/service/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <div class="centered">
-        <div class="hero min-h-screen">
+    <div>
+        <div class="hero min-h-screen hero-head">
             <div class="hero-content flex-col lg:flex-row animate__animated animate__fadeInUp">
                 <div class="tooltip tooltip-secondary" data-tip="Streaming">
                     <div class="avatar">
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div>
-                    <h1 class="text-5xl font-bold">Futami <span data-theme="forest"
+                    <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Futami <span data-theme="forest"
                             class="badge badge-primary animate__animated animate__jello animate__delay-1s animate__infinite">All
                             service is
                             online</span></h1>
@@ -35,6 +35,22 @@
                 </div>
             </div>
         </div>
+        <img width="100%" src="https://cdn.discordapp.com/attachments/1071401485239332864/1157693100450390036/Divider.png">
+        <div class="hero bg-base-200 hero-normal">
+            <div class="hero-content text-center">
+                <div class="max-w-md">
+                    <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Story</h1>
+                    <p class="py-6">Fuumi is a music bot created by FujaTyping in response to a request from his close
+                        friend, ph007phop. Fuumi can play music from a variety of sources and quickly gained popularity
+                        among Discord users.</p>
+                </div>
+            </div>
+        </div>
+        <footer class="footer footer-center p-4 bg-base-300 text-base-content">
+            <aside>
+                <p>Copyright © <a href="https://fujatyping.dev/">FujaTyping</a> 2023 - All right reserved</p>
+            </aside>
+        </footer>
     </div>
 </body>
 
