Update web service

--- a/service/index.html
+++ b/service/index.html
@@ -35,8 +35,50 @@
                 </div>
             </div>
         </div>
-        <img width="100%" src="https://cdn.discordapp.com/attachments/1071401485239332864/1157693100450390036/Divider.png">
+        <img width="100%"
+            src="https://cdn.discordapp.com/attachments/1071401485239332864/1157693100450390036/Divider.png">
         <div class="hero bg-base-200 hero-normal">
+            <div class="hero-content text-center">
+                <div class="max-w-md">
+                    <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Command</h1>
+                    <p class="py-6">My prefix is <kbd class="kbd kbd-sm">f.</kbd></p>
+                    <div>
+                        <div class="collapse collapse-plus bg-base-100">
+                            <input type="radio" name="my-accordion-3" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">
+                                Music command
+                            </div>
+                            <div class="collapse-content lefted">
+                                <p><b>filter</b> : Make your song more funny<br>
+                                    <b>loop</b> : Loop song<br>
+                                    <a class="usage">↳ usage : song | queue | off</a><br>
+                                    <b>play</b> : Play song and join<br>
+                                    <a class="usage">↳ usage : enter song name or url</a><br>
+                                    <b>queue</b> : See song queue<br>
+                                    <b>skip</b> : Skip current song<br>
+                                    <b>stop</b> : Stop current song and leave<br>
+                                    <b>volume</b> : Change volume<br>
+                                    <a class="usage">↳ usage : enter value of volume</a><br>
+                                </p>
+                            </div>
+                        </div> <br>
+                        <div class="collapse collapse-plus bg-base-100">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Etc.
+                            </div>
+                            <div class="collapse-content lefted">
+                                <p>
+                                    <b>about</b> : See about me<br>
+                                    <b>ping</b> : See my response time<br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="hero bg-base-200 hero-normal hero-end">
             <div class="hero-content text-center">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Story</h1>
