Add og in meta tag

--- a/service/index.html
+++ b/service/index.html
@@ -8,6 +8,8 @@
         href="https://cdn.discordapp.com/attachments/1061906037944361001/1157337560067084288/Futami.png"
         type="image/x-icon">
     <title>Futami</title>
+    <meta name="description" content="Futami - Imagine music bot">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1061906037944361001/1157337560067084288/Futami.png" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
@@ -18,7 +20,7 @@
     <div>
         <div class="hero min-h-screen hero-head">
             <div class="hero-content flex-col lg:flex-row animate__animated animate__fadeInUp">
-                <div class="tooltip tooltip-secondary" data-tip="Streaming">
+                <div style="margin-right: 15px;" class="tooltip tooltip-secondary" data-tip="Streaming">
                     <div class="avatar">
                         <div class="rounded-full ring ring-secondary ring-offset-base-100 ring-offset-2">
                             <img class="profile"
@@ -32,6 +34,7 @@
                             service is
                             online</span></h1>
                     <p class="py-6">Imagine music bot<br>Message from Futami : You're so cute >^<</p>
+                    <button onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';" class="btn btn-outline">Invite now</button>
                 </div>
             </div>
         </div>
