--- a/service/index.html
+++ b/service/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
@@ -29,12 +30,12 @@
                     </div>
                 </div>
                 <div>
-                    <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Futami <span data-theme="forest"
+                    <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Futami <span style="color: white;font-weight: normal;" data-theme="forest"
                             class="badge badge-primary animate__animated animate__jello animate__delay-1s animate__infinite">All
                             service is
                             online</span></h1>
                     <p class="py-6">Imagine music bot<br>Message from Futami : You're so cute >^<</p>
-                    <button onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';" class="btn btn-outline">Invite now</button>
+                    <button onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';" class="btn btn-outline">Invite now <span class="material-symbols-outlined">open_in_new</span></button>
                 </div>
             </div>
         </div>
