Update web service

--- a/service/index.html
+++ b/service/index.html
@@ -69,6 +69,18 @@
                         <div class="collapse collapse-plus bg-base-100">
                             <input type="radio" name="my-accordion-3" />
                             <div class="collapse-title text-xl font-medium">
+                                Fun command
+                            </div>
+                            <div class="collapse-content lefted">
+                                <p>
+                                    <b>emote</b> : Show your emote<br>
+                                    <b>meme</b> : Random meme generator<br>
+                                </p>
+                            </div>
+                        </div> <br>
+                        <div class="collapse collapse-plus bg-base-100">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
                                 Etc.
                             </div>
                             <div class="collapse-content lefted">
