Update web service

--- a/service/index.html
+++ b/service/index.html
@@ -35,7 +35,10 @@
                             service is
                             online</span></h1>
                     <p class="py-6">Imagine music bot<br>Message from Futami : You're so cute >^<</p>
-                    <button onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';" class="btn btn-outline">Invite now <span class="material-symbols-outlined">open_in_new</span></button>
+                    <div class="btn-group">
+                        <button onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';" class="btn btn-outline">Invite now <span class="material-symbols-outlined">open_in_new</span></button>
+                        <button onclick="window.location.href = './document.html';" class="btn">Privacy & Terms</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -45,7 +48,7 @@
             <div class="hero-content text-center">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Command</h1>
-                    <p class="py-6">My prefix is <kbd class="kbd kbd-sm">f.</kbd></p>
+                    <p class="py-6">My prefix is <kbd class="kbd kbd-sm">f.</kbd> , You cannot use @MENTION<br>Some command also use <kbd class="kbd kbd-sm">/</kbd> slash command</p>
                     <div>
                         <div class="collapse collapse-plus bg-base-100">
                             <input type="radio" name="my-accordion-3" checked="checked" />
@@ -55,7 +58,7 @@
                             <div class="collapse-content lefted">
                                 <p><b>filter</b> : Make your song more funny<br>
                                     <b>loop</b> : Loop song<br>
-                                    <a class="usage">↳ usage : song | queue | off</a><br>
+                                    <a class="usage">↳ usage : enter off , song or queue</a><br>
                                     <b>play</b> : Play song and join<br>
                                     <a class="usage">↳ usage : enter song name or url</a><br>
                                     <b>queue</b> : See song queue<br>
