Update web service

--- a/service/document.html
+++ b/service/document.html
@@ -24,13 +24,13 @@
               <div class="max-w-md">
                 <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Privacy & Terms</h1>
                 <p class="py-6"><b>Last updated: 2023 10 01</b></p>
-                <button onclick="window.location.href = './index.html';" class="btn"><span class="material-symbols-outlined">arrow_back</span>Back</button>
+                <button onclick="window.location.href = './';" class="btn"><span class="material-symbols-outlined">arrow_back</span>Back</button>
               </div>
             </div>
         </div>
         <img width="100%"
             src="https://cdn.discordapp.com/attachments/1071401485239332864/1157693100450390036/Divider.png">
-        <div class="hero bg-base-200 hero-normal">
+        <div class="hero bg-base-200 hero-normal hero-pp">
             <div class="hero-content text-center">
                 <div class="max-w-md lefted">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Privacy policy</h1>
