Update web service

--- a/service/index.html
+++ b/service/index.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon"
-        href="https://cdn.discordapp.com/attachments/1061906037944361001/1157337560067084288/Futami.png"
-        type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
     <title>Futami</title>
     <meta name="description" content="Futami - Imagine music bot">
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/1061906037944361001/1157337560067084288/Futami.png" />
@@ -44,7 +42,32 @@
         </div>
         <img width="100%"
             src="https://cdn.discordapp.com/attachments/1071401485239332864/1157693100450390036/Divider.png">
-        <div class="hero bg-base-200 hero-normal">
+        <div style="padding-top: 40px;" class="hero bg-base-200">
+            <div class="hero-content text-center">
+                <div class="max-w-md">
+                    <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Feature</h1>
+                </div>
+            </div>
+        </div>
+        <div style="padding-top: 5px;" class="hero bg-base-200 hero-normal hero-music">
+            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
+                <img style="max-width: 18rem;" src="https://cdn.discordapp.com/attachments/1071401485239332864/1158999355206926366/image.png" class="max-w-sm rounded-lg shadow-2xl" />
+                <div>
+                    <h1 class="text-5xl font-bold">Support many music platform</h1>
+                    <p class="py-6">Youtube / Soundcloud / Spotify / Deezer</p>
+                </div>
+            </div>
+        </div>
+        <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
+            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
+              <img style="max-width: 18rem;" src="https://cdn.discordapp.com/attachments/1071401485239332864/1159022659783364648/image.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div>
+                <h1 class="text-5xl font-bold">Make discord more funny</h1>
+                <p class="py-6">With fun command</p>
+              </div>
+            </div>
+        </div>
+        <div class="hero bg-base-200 hero-normal hero-command">
             <div class="hero-content text-center">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Command</h1>
@@ -97,7 +120,7 @@
                 </div>
             </div>
         </div>
-        <div class="hero bg-base-200 hero-normal hero-end">
+        <div class="hero bg-base-200 hero-normal">
             <div class="hero-content text-center">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Story</h1>
