--- a/service/document.html
+++ b/service/document.html
@@ -30,7 +30,7 @@
         </div>
         <img width="100%"
             src="https://cdn.discordapp.com/attachments/1071401485239332864/1157693100450390036/Divider.png">
-        <div class="hero bg-base-200 hero-normal hero-pp">
+        <div class="hero bg-base-200 hero-normal">
             <div class="hero-content text-center">
                 <div class="max-w-md lefted">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Privacy policy</h1>
