Cut discord cdn out

--- a/service/document.html
+++ b/service/document.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon"
-        href="https://cdn.discordapp.com/attachments/1061906037944361001/1157337560067084288/Futami.png"
-        type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
     <title>Futami</title>
     <meta name="description" content="Futami - Privacy & Terms">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1061906037944361001/1157337560067084288/Futami.png" />
+    <meta property="og:image" content="./assets/fav.ico" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
@@ -28,8 +26,7 @@
               </div>
             </div>
         </div>
-        <img width="100%"
-            src="https://cdn.discordapp.com/attachments/1071401485239332864/1157693100450390036/Divider.png">
+        <img width="100%" src="./assets/divider.png">
         <div class="hero bg-base-200 hero-normal">
             <div class="hero-content text-center">
                 <div class="max-w-md lefted">
