--- a/service/index.html
+++ b/service/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
     <title>Futami</title>
     <meta name="description" content="Futami - Imagine music bot">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1061906037944361001/1157337560067084288/Futami.png" />
+    <meta property="og:image" content="./assets/fav.ico" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
@@ -23,7 +23,7 @@
                     <div class="avatar">
                         <div class="rounded-full ring ring-secondary ring-offset-base-100 ring-offset-2">
                             <img class="profile"
-                                src="https://cdn.discordapp.com/attachments/1061906037944361001/1157337560067084288/Futami.png" />
+                                src="./assets/fav.ico" />
                         </div>
                     </div>
                 </div>
@@ -40,8 +40,7 @@
                 </div>
             </div>
         </div>
-        <img width="100%"
-            src="https://cdn.discordapp.com/attachments/1071401485239332864/1157693100450390036/Divider.png">
+        <img width="100%" src="./assets/divider.png">
         <div style="padding-top: 40px;" class="hero bg-base-200">
             <div class="hero-content text-center">
                 <div class="max-w-md">
@@ -51,7 +50,7 @@
         </div>
         <div style="padding-top: 5px;" class="hero bg-base-200 hero-normal hero-music">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
-                <img style="max-width: 18rem;" src="https://cdn.discordapp.com/attachments/1071401485239332864/1158999355206926366/image.png" class="max-w-sm rounded-lg shadow-2xl" />
+                <img style="max-width: 18rem;" src="./assets/feature-music.png" class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Support many music platform</h1>
                     <p class="py-6">Youtube / Soundcloud / Spotify / Deezer</p>
@@ -60,7 +59,7 @@
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
-              <img style="max-width: 18rem;" src="https://cdn.discordapp.com/attachments/1071401485239332864/1159022659783364648/image.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <img style="max-width: 18rem;" src="./assets/feature-fun.png" class="max-w-sm rounded-lg shadow-2xl" />
               <div>
                 <h1 class="text-5xl font-bold">Make discord more funny</h1>
                 <p class="py-6">With fun command</p>
