--- a/service/document.html
+++ b/service/document.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
     <title>Futami</title>
     <meta name="description" content="Futami - Privacy & Terms">
-    <meta property="og:image" content="./assets/fav.ico" />
+    <meta property="og:image" content="https://futami.onrender.com/assets/banner.png" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
