--- a/service/document.html
+++ b/service/document.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
+    <meta property="og:type" content="article">
     <title>Futami</title>
     <meta name="description" content="Futami - Privacy & Terms">
     <meta property="og:image" content="https://futami.onrender.com/assets/banner.png" />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
