--- a/service/index.html
+++ b/service/index.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
-    <meta property="og:type" content="article">
+    <meta property="og:type" content="website" />
     <title>Futami</title>
+    <meta name="theme-color" content="#345ca8"/>
     <meta name="description" content="Futami - Imagine music bot">
     <meta property="og:image" content="https://futami.onrender.com/assets/banner.png" />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Futami">
+    <meta name="twitter:description" content="Futami - Privacy & Terms">
+    <meta name="twitter:site" content="@fujatyping" />
+    <meta name="twitter:creator" content="@fujatyping" />
+    <meta property="twitter:image" content="https://futami.onrender.com/assets/banner.png" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
