--- a/service/index.html
+++ b/service/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image:type" content="image/png">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Futami">
-    <meta name="twitter:description" content="Futami - Privacy & Terms">
+    <meta name="twitter:description" content="Futami - Imagine music bot">
     <meta name="twitter:site" content="@fujatyping" />
     <meta name="twitter:creator" content="@fujatyping" />
     <meta property="twitter:image" content="https://futami.onrender.com/assets/banner.png" />
