--- a/service/index.html
+++ b/service/index.html
@@ -70,7 +70,7 @@
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
-              <img style="max-width: 18rem;" src="./assets/feature-fun.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <img style="max-width: 18rem;" src="./assets/feature-fun.png" class="max-w-sm rounded-lg shadow-2xl image-feature" />
               <div>
                 <h1 class="text-5xl font-bold">Make discord more funny</h1>
                 <p class="py-6">With fun command</p>
