--- a/service/index.html
+++ b/service/index.html
@@ -24,9 +24,15 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script defer src="./index.js"></script>
 </head>
 
 <body>
+    <button class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
+        <span class="material-symbols-outlined">
+            vertical_align_top
+        </span>
+    </button>
     <div>
         <div class="hero min-h-screen hero-head">
             <div class="hero-content flex-col lg:flex-row animate__animated animate__fadeInUp">
