Update web service

--- a/service/index.html
+++ b/service/index.html
@@ -70,7 +70,12 @@
                 <img style="max-width: 18rem;" src="./assets/feature-music.png" class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Support many music platform</h1>
-                    <p class="py-6">Youtube / Soundcloud / Spotify / Deezer</p>
+                    <p class="py-6">Future will support more platform :D</p>
+                    <div class="flex flex-col w-full lg:flex-row">
+                        <div class="grid flex-grow h-20 card bg-base-300 rounded-box place-items-center">Soundcloud / Spotify / Deezer</div>
+                        <div class="divider lg:divider-horizontal">OR</div>
+                        <div class="grid flex-grow h-20 card bg-base-300 rounded-box place-items-center">Name / Title of the song</div>
+                    </div>
                 </div>
             </div>
         </div>
