--- a/service/index.html
+++ b/service/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
     <title>Futami</title>
-    <meta name="theme-color" content="#345ca8"/>
+    <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - Imagine music bot">
     <meta property="og:image" content="https://futami.onrender.com/assets/banner/content-index.png" />
     <meta property="og:image:width" content="1200">
@@ -23,7 +23,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script defer src="./index.js"></script>
 </head>
 
@@ -39,21 +40,25 @@
                 <div style="margin-right: 15px;" class="tooltip tooltip-secondary" data-tip="Streaming">
                     <div class="avatar">
                         <div class="rounded-full ring ring-secondary ring-offset-base-100 ring-offset-2">
-                            <img class="profile"
-                                src="./assets/fav.ico" />
+                            <img class="profile" src="./assets/fav.ico" />
                         </div>
                     </div>
                 </div>
                 <div>
-                    <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Futami <span style="color: white;font-weight: normal;" data-theme="forest"
+                    <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Futami <span
+                            style="color: white;font-weight: normal;" data-theme="forest"
                             class="badge badge-primary animate__animated animate__jello animate__delay-1s animate__infinite">All
                             service is
                             online</span></h1>
-                    <p class="py-6">Imagine music bot<br>Message from Futami : You're so cute >^<</p>
-                    <div class="btn-group">
-                        <button onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';" class="btn btn-outline">Invite now <span class="material-symbols-outlined">open_in_new</span></button>
-                        <button onclick="window.location.href = './document.html';" class="btn">Privacy & Terms</button>
-                    </div>
+                    <p class="py-6">Imagine music bot<br>Message from Futami : You're so cute >^<< /p>
+                            <div class="btn-group">
+                                <button
+                                    onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';"
+                                    class="btn btn-outline">Invite now <span
+                                        class="material-symbols-outlined">open_in_new</span></button>
+                                <button onclick="window.location.href = './document.html';" class="btn">Privacy &
+                                    Terms</button>
+                            </div>
                 </div>
             </div>
         </div>
@@ -67,32 +72,37 @@
         </div>
         <div style="padding-top: 5px;" class="hero bg-base-200 hero-normal hero-music">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
-                <img style="max-width: 18rem;" src="./assets/feature-music.png" class="max-w-sm rounded-lg shadow-2xl" />
+                <img style="max-width: 18rem;" src="./assets/feature-music.png"
+                    class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Support many music platform</h1>
                     <p class="py-6">Future will support more platform :D</p>
                     <div class="flex flex-col w-full lg:flex-row">
-                        <div class="grid flex-grow h-20 card bg-base-300 rounded-box place-items-center">Soundcloud / Spotify / Deezer</div>
+                        <div class="grid flex-grow h-20 card bg-base-300 rounded-box place-items-center">Soundcloud /
+                            Spotify / Deezer</div>
                         <div class="divider lg:divider-horizontal">OR</div>
-                        <div class="grid flex-grow h-20 card bg-base-300 rounded-box place-items-center">Name / Title of the song</div>
+                        <div class="grid flex-grow h-20 card bg-base-300 rounded-box place-items-center">Name / Title of
+                            the song</div>
                     </div>
                 </div>
             </div>
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
-              <img style="max-width: 18rem;" src="./assets/feature-fun.png" class="max-w-sm rounded-lg shadow-2xl image-feature" />
-              <div>
-                <h1 class="text-5xl font-bold">Make discord more funny</h1>
-                <p class="py-6">With fun command</p>
-              </div>
+                <img style="max-width: 18rem;" src="./assets/feature-fun.png"
+                    class="max-w-sm rounded-lg shadow-2xl image-feature" />
+                <div>
+                    <h1 class="text-5xl font-bold">Make discord more funny</h1>
+                    <p class="py-6">With fun command</p>
+                </div>
             </div>
         </div>
         <div class="hero bg-base-200 hero-normal hero-command">
             <div class="hero-content text-center">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Command</h1>
-                    <p class="py-6">My prefix is <kbd class="kbd kbd-sm">f.</kbd> , You cannot use @MENTION<br>Some command also use <kbd class="kbd kbd-sm">/</kbd> slash command</p>
+                    <p class="py-6">My prefix is <kbd class="kbd kbd-sm">f.</kbd> , You cannot use @MENTION<br>Some
+                        command also use <kbd class="kbd kbd-sm">/</kbd> slash command</p>
                     <div>
                         <div class="collapse collapse-plus bg-base-100">
                             <input type="radio" name="my-accordion-3" checked="checked" />
@@ -110,6 +120,18 @@
                                     <b>stop</b> : Stop current song and leave<br>
                                     <b>volume</b> : Change volume<br>
                                     <a class="usage">↳ usage : enter value of volume</a><br>
+                                </p>
+                            </div>
+                        </div> <br>
+                        <div class="collapse collapse-plus bg-base-100">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Mod command
+                            </div>
+                            <div class="collapse-content lefted">
+                                <p>
+                                    <b>timeout</b> : timeout member in guild<br>
+                                    <a class="usage">↳ usage : enter user , duration , reason</a>
                                 </p>
                             </div>
                         </div> <br>
