Add kick command

--- a/service/index.html
+++ b/service/index.html
@@ -131,7 +131,9 @@
                             <div class="collapse-content lefted">
                                 <p>
                                     <b>timeout</b> : timeout member in guild<br>
-                                    <a class="usage">↳ usage : enter user , duration , reason</a>
+                                    <a class="usage">↳ usage : enter user , duration , reason</a><br>
+                                    <b>kick</b> : kick member<br>
+                                    <a class="usage">↳ usage : enter user , reason</a>
                                 </p>
                             </div>
                         </div> <br>
