Update web service

--- a/service/index.html
+++ b/service/index.html
@@ -97,6 +97,15 @@
                 </div>
             </div>
         </div>
+        <div style="padding-top: 0;" class="hero bg-base-200 hero-normal hero-mod">
+            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
+                <img style="max-width: 18rem;" src="./assets/feature-mod.png" class="max-w-sm rounded-lg shadow-2xl" />
+                <div>
+                    <h1 class="text-5xl font-bold">Make moderation easier</h1>
+                    <p class="py-6">Future will support more platform :D</p>
+                </div>
+            </div>
+        </div>
         <div class="hero bg-base-200 hero-normal hero-command">
             <div class="hero-content text-center">
                 <div class="max-w-md">
@@ -126,7 +135,7 @@
                         <div class="collapse collapse-plus bg-base-100">
                             <input type="radio" name="my-accordion-3" />
                             <div class="collapse-title text-xl font-medium">
-                                Mod command
+                                Moderation command
                             </div>
                             <div class="collapse-content lefted">
                                 <p>
@@ -165,13 +174,16 @@
                 </div>
             </div>
         </div>
-        <div class="hero bg-base-200 hero-normal">
+        <div class="hero bg-base-200 hero-normal hero-footer">
             <div class="hero-content text-center">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Story</h1>
                     <p class="py-6">Fuumi is a music bot created by FujaTyping in response to a request from his close
                         friend, ph007phop. Fuumi can play music from a variety of sources and quickly gained popularity
                         among Discord users.</p>
+                    <button onclick="window.location.href = 'https://link.fujatyping.dev/discord';"
+                        class="btn bg-base-300"><span class="material-symbols-outlined">support_agent</span>
+                        Support</button>
                 </div>
             </div>
         </div>
