--- a/service/index.html
+++ b/service/index.html
@@ -50,7 +50,7 @@
                             class="badge badge-primary animate__animated animate__jello animate__delay-1s animate__infinite">All
                             service is
                             online</span></h1>
-                    <p class="py-6">Imagine music bot<br>Message from Futami : You're so cute >^<< /p>
+                    <p class="py-6">Imagine music bot<br>Message from Futami : You're so cute >^<</p>
                             <div class="btn-group">
                                 <button
                                     onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';"
@@ -190,6 +190,7 @@
         <footer class="footer footer-center p-4 bg-base-300 text-base-content">
             <aside>
                 <p>Copyright © <a href="https://fujatyping.dev/">FujaTyping</a> 2023 - All right reserved</p>
+                <img width="200px" style="margin-top: 8px;" src="https://count.getloli.com/get/@futami?theme=moebooru">
             </aside>
         </footer>
     </div>
