--- a/service/index.html
+++ b/service/index.html
@@ -102,7 +102,7 @@
                 <img style="max-width: 18rem;" src="./assets/feature-mod.png" class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Make moderation easier</h1>
-                    <p class="py-6">Future will support more platform :D</p>
+                    <p class="py-6">Now to can use command to moderation your server</p>
                 </div>
             </div>
         </div>
