Update web service (halloween)

--- a/service/index.html
+++ b/service/index.html
@@ -9,7 +9,7 @@
     <title>Futami</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - Imagine music bot">
-    <meta property="og:image" content="https://futami.onrender.com/assets/banner/content-index.png" />
+    <meta property="og:image" content="https://futami.fujatyping.dev/assets/banner/content-index.png" />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="Futami - Imagine music bot">
     <meta name="twitter:site" content="@fujatyping" />
     <meta name="twitter:creator" content="@fujatyping" />
-    <meta property="twitter:image" content="https://futami.onrender.com/assets/banner/content-index.png" />
+    <meta property="twitter:image" content="https://futami.fujatyping.dev/assets/banner/content-index.png" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
@@ -40,7 +40,7 @@
                 <div style="margin-right: 15px;" class="tooltip tooltip-secondary" data-tip="Streaming">
                     <div class="avatar">
                         <div class="rounded-full ring ring-secondary ring-offset-base-100 ring-offset-2">
-                            <img class="profile" src="./assets/fav.ico" />
+                            <img class="profile" src="./assets/event/futami (halloween).png" />
                         </div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                             class="badge badge-primary animate__animated animate__jello animate__delay-1s animate__infinite">All
                             service is
                             online</span></h1>
-                    <p class="py-6">Imagine music bot<br>Message from Futami : You're so cute >^<< /p>
+                    <p class="py-6">Imagine music bot<br>Message from Futami : Booo! 👻</p>
                             <div class="btn-group">
                                 <button
                                     onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';"
