--- a/service/document.html
+++ b/service/document.html
@@ -9,7 +9,7 @@
     <title>Futami</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - Privacy & Terms">
-    <meta property="og:image" content="https://futami.onrender.com/assets/banner/content-pat.png" />
+    <meta property="og:image" content="https://futami.fujatyping.dev/assets/banner/content-pat.png" />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="Futami - Privacy & Terms">
     <meta name="twitter:site" content="@fujatyping" />
     <meta name="twitter:creator" content="@fujatyping" />
-    <meta property="twitter:image" content="https://futami.onrender.com/assets/banner/content-pat.png" />
+    <meta property="twitter:image" content="https://futami.fujatyping.dev/assets/banner/content-pat.png" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
