Update web service

--- a/service/index.html
+++ b/service/index.html
@@ -125,6 +125,7 @@
                                     <a class="usage">↳ usage : enter off , song or queue</a><br>
                                     <b>play</b> : Play song and join<br>
                                     <a class="usage">↳ usage : enter song name or url</a><br>
+                                    <b>pause</b> : pause a song<br>
                                     <b>queue</b> : See song queue<br>
                                     <b>skip</b> : Skip current song<br>
                                     <b>stop</b> : Stop current song and leave<br>
