Update chrismas theme

--- a/service/index.html
+++ b/service/index.html
@@ -40,7 +40,7 @@
                 <div style="margin-right: 15px;" class="tooltip tooltip-secondary" data-tip="Streaming">
                     <div class="avatar">
                         <div class="rounded-full ring ring-secondary ring-offset-base-100 ring-offset-2">
-                            <img class="profile" src="./assets/event/futami (halloween).png" />
+                            <img class="profile" src="./assets/event/futami (chrismas).png" />
                         </div>
                     </div>
                 </div>
@@ -50,15 +50,16 @@
                             class="badge badge-primary animate__animated animate__jello animate__delay-1s animate__infinite">All
                             service is
                             online</span></h1>
-                    <p class="py-6">Imagine music bot<br>Message from Futami : Booo! 👻</p>
-                            <div class="btn-group">
-                                <button
-                                    onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';"
-                                    class="btn btn-outline">Invite now <span
-                                        class="material-symbols-outlined">open_in_new</span></button>
-                                <button onclick="window.location.href = './document.html';" class="btn">Privacy &
-                                    Terms</button>
-                            </div>
+                    <p class="py-6">Imagine music bot<br>Message from Futami : Merry chrismas and Happy new year 🎉❄️
+                    </p>
+                    <div class="btn-group">
+                        <button
+                            onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';"
+                            class="btn btn-outline">Invite now <span
+                                class="material-symbols-outlined">open_in_new</span></button>
+                        <button onclick="window.location.href = './document.html';" class="btn">Privacy &
+                            Terms</button>
+                    </div>
                 </div>
             </div>
         </div>
