Update deps and Songkharn theme

--- a/service/index.html
+++ b/service/index.html
@@ -40,7 +40,7 @@
                 <div style="margin-right: 15px;" class="tooltip tooltip-secondary" data-tip="Streaming">
                     <div class="avatar">
                         <div class="rounded-full ring ring-secondary ring-offset-base-100 ring-offset-2">
-                            <img class="profile" src="./assets/event/futami (chrismas).png" />
+                            <img class="profile" src="./assets/event/futami (songkharn).png" />
                         </div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                             class="badge badge-primary animate__animated animate__jello animate__delay-1s animate__infinite">All
                             service is
                             online</span></h1>
-                    <p class="py-6">Imagine music bot<br>Message from Futami : Merry chrismas and Happy new year 🎉❄️
+                    <p class="py-6">Imagine music bot<br>Message from Futami : Happy new year 🌴
                     </p>
                     <div class="btn-group">
                         <button
