--- a/service/index.html
+++ b/service/index.html
@@ -53,9 +53,7 @@
                     <p class="py-6">Imagine music bot<br>Message from Futami : Happy new year 🌴
                     </p>
                     <div class="btn-group">
-                        <button
-                            onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=1155156868554043484&permissions=8&scope=bot%20applications.commands';"
-                            class="btn btn-outline">Invite now <span
+                        <button onclick="pleaseread_modal.showModal()" class="btn btn-outline">Invite now <span
                                 class="material-symbols-outlined">open_in_new</span></button>
                         <button onclick="window.location.href = './document.html';" class="btn">Privacy &
                             Terms</button>
@@ -210,6 +208,30 @@
         <form method="dialog" class="modal-backdrop">
             <button>close</button>
         </form>
+    </dialog>
+    <dialog id="pleaseread_modal" class="modal">
+        <div class="modal-box">
+            <h3 class="font-bold text-lg">Privacy & Terms</h3>
+            <p class="py-4">Please read our <a style="text-decoration: underline;" href="./document.html">Terms Of
+                    Service</a> and <a href="./document.html" style="text-decoration: underline;">Privacy Policy</a>
+                <br><br>The
+                developer may change these terms of service at any time. Any changes will be posted on the Futami
+                website and will take effect immediately.
+            </p>
+            <div class="form-control">
+                <label class="label cursor-pointer">
+                    <span id="agreeText" class="label-text">I have read and agree to futami.fujatyping.dev's ToS and
+                        PP</span>
+                    <input id="agreeBox" type="checkbox" class="checkbox" />
+                </label>
+            </div>
+            <div class="modal-action">
+                <button onclick="ContinueInvite()" id="ConfirmInvite" class="btn">Continue</button>
+                <form method="dialog">
+                    <button class="btn">Close</button>
+                </form>
+            </div>
+        </div>
     </dialog>
 </body>
 
