Add game command and deps

--- a/service/index.html
+++ b/service/index.html
@@ -140,9 +140,9 @@
                             </div>
                             <div class="collapse-content lefted">
                                 <p>
-                                    <b>timeout</b> : timeout member in guild<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> timeout</b> : timeout member in guild<br>
                                     <a class="usage">↳ usage : enter user , duration , reason</a><br>
-                                    <b>kick</b> : kick member<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> kick</b> : kick member<br>
                                     <a class="usage">↳ usage : enter user , reason</a>
                                 </p>
                             </div>
@@ -154,8 +154,10 @@
                             </div>
                             <div class="collapse-content lefted">
                                 <p>
-                                    <b>emote</b> : Show your emote<br>
-                                    <b>meme</b> : Random meme generator<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> emote</b> : Show your emote<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> meme</b> : Random meme generator<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> tictactoe</b> : Play tic tac toe game<br>
+                                    <a class="usage">↳ usage : enter user</a><br>
                                 </p>
                             </div>
                         </div> <br>
@@ -166,8 +168,8 @@
                             </div>
                             <div class="collapse-content lefted">
                                 <p>
-                                    <b>info</b> : Show server info<br>
-                                    <b>about</b> : See about me<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> info</b> : Show server info<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> about</b> : See about me<br>
                                     <b>ping</b> : See my response time<br>
                                 </p>
                             </div>
