Add fast type activities

--- a/service/index.html
+++ b/service/index.html
@@ -158,6 +158,7 @@
                                     <b><kbd class="kbd kbd-sm">/</kbd> meme</b> : Random meme generator<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> tictactoe</b> : Play tic tac toe game<br>
                                     <a class="usage">↳ usage : enter user</a><br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> fasttype</b> : Test your type speed<br>
                                 </p>
                             </div>
                         </div> <br>
