--- a/service/index.html
+++ b/service/index.html
@@ -183,6 +183,8 @@
             <div class="hero-content text-center">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Story</h1>
+                    <img style="max-width: 18rem;margin: auto;margin-top: 22.5px;" src="./assets/banner/Card-Futami.png"
+                        class="max-w-sm rounded-lg shadow-2xl" />
                     <p class="py-6">Fuumi is a music bot created by FujaTyping in response to a request from his close
                         friend, ph007phop. Fuumi can play music from a variety of sources and quickly gained popularity
                         among Discord users.</p>
@@ -194,7 +196,7 @@
         </div>
         <footer class="footer footer-center p-4 bg-base-300 text-base-content">
             <aside>
-                <p>Copyright © <a href="https://fujatyping.dev/">FujaTyping</a> 2023 - All right reserved</p>
+                <p>Copyright © <a href="https://fujatyping.dev/">FujaTyping</a> 2023-2024 | All right reserved</p>
                 <img width="200px" style="margin-top: 8px;" src="https://count.getloli.com/get/@futami?theme=moebooru">
             </aside>
         </footer>
