--- a/service/document.html
+++ b/service/document.html
@@ -103,7 +103,7 @@
         </div>
         <footer class="footer footer-center p-4 bg-base-300 text-base-content">
             <aside>
-                <p>Copyright © <a href="https://fujatyping.dev/">FujaTyping</a> 2023 - All right reserved</p>
+                <p>Copyright © <a href="https://fujatyping.dev/">FujaTyping</a> 2023-2024 | All right reserved</p>
             </aside>
         </footer>
     </div>
