--- a/service/index.html
+++ b/service/index.html
@@ -159,6 +159,7 @@
                                     <b><kbd class="kbd kbd-sm">/</kbd> tictactoe</b> : Play tic tac toe game<br>
                                     <a class="usage">↳ usage : enter user</a><br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> fasttype</b> : Test your type speed<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> matchpairs</b> : Play match pairs emoji game<br>
                                 </p>
                             </div>
                         </div> <br>
